# test_vdc_module

./: .gitmodules  Test_voice_module_api.ipynb  pyproject.toml  vdc_module_colab.ipynb
app/: main.py  vdc_xtss_demo.py
