[project]
name = "text_vdc_module_api"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "numpy (>=1.22,<2.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "vdc-module @ git+https://github.com/minhtri1A/vdc_module.git@module",
]

[tool.poetry]
packages = [{include = "mms_tts_vie", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
